--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,11 @@
+body{
+    background-image: url('../img/fondo-home-smart.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 .correo{
     text-decoration: none;
 }
@@ -11,7 +19,7 @@
 
 .contact-title{
     text-align: center;
-    font-size: 3em;
+    letter-spacing: 8px;
 }
 
 /* .div-contact{
@@ -36,33 +44,35 @@
     
 } */
 
-.contact-form form .block{
-   grid-column: 1/3; 
-}
-
-.contact-form form button,
 .contact-form form input,
 .contact-form form textarea{
     width: 100%;
     padding: 0.7em;
     border: none;
-    background-color: rgba(26, 26, 26, 0.4);
+    background-color: rgba(0, 0, 0, 0.4);
     outline: none;
     color: white;
     box-sizing: border-box;
+    margin-top: 0.5em;
 }
+
 
 .contact-form form input{
     height: 2em;
 }
 
-
 .contact-form form button{
-    background: #2001FD;
-    border: 0;
-    text-transform: uppercase;
+    width: 60%;
+    margin: 0px 20%;
     padding: 1em;
+    border: none;
+    background: #2001FD;
+    outline: none;
+    color: white;
+    box-sizing: border-box;
+    text-transform: uppercase;
 }
+
 
 .contact-form form button:hover,
 .contact-form form button:focus{
@@ -72,21 +82,13 @@
 }
 
 .contact-info{
-    background-color: rgba(26, 26, 26, 0.3);
-    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.links-contact{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 25%;
-    min-width: 100px;
-    height: 43px;
-}
+
 
 .contact-info h4,
 .contact-info ul,
@@ -94,6 +96,10 @@
     text-align: center;
     margin: 0 0 1rem 0;
 
+}
+
+.contact-form .block{
+    padding-bottom: 0;
 }
 
 .contact-info ul{
@@ -105,120 +111,90 @@
     padding: .3em;
 }
 
+.contact-info ul li a{
+    color: white;
+}
+
 iframe{
-    width: 250px;
+    width: 90%;
     height: 250px;
     margin: 0px auto;
 }
 
-@media (min-width: 700px){
+.links-contact{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 25%;
+    min-width: 100px;
+    height: 43px;
+}
+
+@media (min-width: 768px){
+    
+    .contact{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-bottom: 0;
+        padding-top: 0;
+    }
+
+    .contact-title{
+        font-size: 5em;
+    }
+
     .div-contact{
         display: grid;
-        grid-template-columns: 2fr 1fr ;
-    }
-
-    .div-contact > * {
-        padding: 2em;
-    }
-
-    .contact-info h4,
-    .contact-info ul,
-    .contact-info p{
-        padding: 1em;
-    }
-
-    .contact{
-        max-width: 1170px;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 1.5em;
-    }
-    
-    .contact-title{
-        text-align: center;
-        font-size: 3em;
-    }
-    
-    .div-contact{
-        box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
-    }
-    
-    .div-contact > *{
-        padding: 1em;
+        grid-template-columns: 3fr 2fr;
     }
     
     .contact-form{
-        background-color: rgba(0, 0, 0, .5);
-    }
-    
-    .contact-form form p{
-        margin: 0;
-        padding: 1em;
+        padding: 0;
     }
     
     .contact-form form{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-    
-    .contact-form form .block{
-       grid-column: 1/3; 
-    }
-    
-    .contact-form form button,
-    .contact-form form input,
-    .contact-form form textarea{
-        width: 100%;
-        padding: 0.7em;
-        border: none;
-        background: none;
-        outline: none;
-        border-bottom: 1px solid #d63031;
-        color: #fff;
-        box-sizing: border-box;
-    }
-    
-    .contact-form form button{
-        background: #b70e21;
-        border: 0;
-        text-transform: uppercase;
-        padding: 1em;
-    }
-    
-    .contact-form form button:hover,
-    .contact-form form button:focus{
-        background: #d63031;
-        color: blue;
-        transition: background-color 1s ease-out;
-        outline: none;
+        font-size: 1.3em;
+        font-weight: bold;
     }
     
     .contact-info{
-        background: yellowgreen;
-        display: flex;
-        flex-direction: column;
+        padding: 0.3em;
+        justify-content: center;
     }
-    
-    .contact-info h4,
+
     .contact-info ul,
     .contact-info p{
-        text-align: center;
-        margin: 0 0 1rem 0;
-    
+        padding: 0.3em;
     }
     
-    .contact-info ul{
-        list-style: none;
-        padding: 0px;
+    .contact-info h4{
+        margin: 0;
+        padding: 1em;
+        font-size: 1.3em;
+    }
+
+    .links-contact{
+        width: 50%;
+        height: 43px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+}
+
+@media (min-width: 769px){
+    body{
+        background-image: url('../img/fondo-home.jpg');
+    }
+}
+
+@media (min-width: 1024px){
+        
+    .contact-info{
+        font-size: 1.3em;
     }
     
-    .contact-info ul li{
-        padding: .3em;
-    }
-    
-    iframe{
-        width: 250px;
-        height: 250px;
-        margin: 0px auto;
+    .contact-info h4{
+        font-size: 1.5em;
     }
 }
