--- a/css/skills.css
+++ b/css/skills.css
@@ -8,11 +8,8 @@ body{
 }
 
 .about{
-    max-width: 1340px;
-    margin: 100px auto;
-    padding-left: 50px;
-    text-align: right;
-    padding-top: 50px;
+    margin-top: 30px;
+    text-align: center;
     display: flex;
     flex-direction: column;
 }
@@ -24,7 +21,7 @@ body{
 }
 
 .about-title{
-    font-size: 140px;
+    font-size: 60px;
     font-weight: bold;
     margin: 0;
     color: white;
@@ -33,57 +30,58 @@ body{
 }
 
 .about-me{
-    font-size: 50px;
-    margin: 50px 0px 5px auto;
+    font-size: 20px;
     font-weight: 500;
     line-height: 1.3;
     max-width: 800px;
+    width: 90%;
+    margin: 50px  auto 0px;
 }
 
 /* habilidades duras */
 
 .skills{
-    width: 70%;
+    width: 80%;
     margin: 0px auto;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .skills-div{
-    max-width: 100%;
+    width: 100%;
+    max-width: 350px;
 }
 
 .hard-title{
-    font-size: 70px;
+    font-size: 40px;
     text-align: center;
 }
 
 .skills-hard{
-    margin: 50px 0px;
+    margin: 10px 0px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
 }
 
 .hard{
     list-style: none;
-    width: 47%;
+    width: 100%;
     margin: 0px;  
     padding: 0px;
 }
 
 .percent{
     display: flex;
-    margin-top: 1%;
+    margin-top: 5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* line-height: 1.5; */
 }
 
-.percent:first-child{
-    margin-top: 0px;
-}
 
 .skill-icon{
     display: flex;
@@ -102,13 +100,13 @@ body{
 }
 
 .skill-name{
-    font-size: 30px;
+    font-size: 10px;
     letter-spacing: 0.2em;
     font-weight: bold;
 }
 
 .skill-percent{
-    font-size: 25px;
+    font-size: 10px;
     font-weight: bold;
     letter-spacing: 0.2em;
 }
@@ -157,70 +155,472 @@ body{
 
 .fa-css3-alt{
     color: #0096DC;
-    font-size: 60px;
+    font-size: 30px;
 }
 
 .fa-html5{
     color: #F36518;
-    font-size: 60px;
+    font-size: 30px;
 }
 
 .fa-js{
     color: #FFDB1D;
-    font-size: 60px;
+    font-size: 30px;
 }
 
 .fa-java{
     background: linear-gradient(0deg, rgba(14,138,202,1) 40%, rgba(237,32,37,1) 50%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    font-size: 60px;
+    font-size: 30px;
 }
 
 .fa-php{
     color: #8993C1;
-    font-size: 60px;
+    font-size: 30px;
 }
 
 .fa-python{
     background: linear-gradient(140deg, rgba(69,134,185,1) 50%, rgba(255,230,52,1) 50%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    font-size: 60px;
+    font-size: 30px;
 }
 
 
 /* habilidades blandas */
 .soft-title{
-    font-size: 70px;
+    font-size: 40px;
     text-align: center;
     margin-top: 100px;
 }
 
 .skills-soft{
-    margin: 50px 0px;    
-}
-
-.skill-soft{
-    font-size: 30px;
-}
-
-.skills-soft{
     margin: 50px 0px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
 }
 
 .soft{
     list-style: none;
-    width: 47%;
+    width: 100%;
     margin: 0px;  
     padding: 0px;
     text-align: center;
 }
 
 .skill-soft{
-    font-size: 50px;
+    font-size: 20px;
     margin-top: 10px;
+}
+
+@media (min-width: 768px){
+    .about{
+        text-align: right;
+        margin-right: 5%;
+    }
+    
+    .about-title{
+        font-size: 90px;
+    }
+    
+    .about-me{
+        font-size: 40px;
+        margin: 50px 0px 5px auto;
+    }
+    
+    /* habilidades duras */
+        
+    .hard-title{
+        font-size: 70px;
+    }
+    
+    .skills-hard{
+        margin: 50px 0px;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    
+    .hard{
+        list-style: none;
+        width: 47%;
+        margin: 0px;  
+        padding: 0px;
+    }
+    
+    .percent{
+        display: flex;
+        margin-top: 1%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        /* line-height: 1.5; */
+    }
+    
+    .percent:first-child{
+        margin-top: 0px;
+    }
+    
+    .skill-icon{
+        display: flex;
+        justify-content: flex-end;
+        width: 15%;
+    }
+    
+    .skill-detail{
+        width: 80%;
+    }
+    
+    .skill-info{
+        margin-bottom: 5px;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .skill-name{
+        font-size: 30px;
+        letter-spacing: 0.2em;
+        font-weight: bold;
+    }
+    
+    .skill-percent{
+        font-size: 25px;
+        font-weight: bold;
+        letter-spacing: 0.2em;
+    }
+    
+    .skill-bar{
+        width: 100%;
+        height: 10px;
+        background-color: white;
+        position: relative;
+        border-radius: 10px;
+        z-index: -1;
+    }
+    
+    .skill-bar:after{
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 100%;
+        border-radius: 10px;
+        background:linear-gradient(90deg, var(--primary-color), blue);
+    }   
+    
+    .skl-css:after{
+        width: 30%;
+    }
+    
+    .skl-html:after{
+        width: 45%;
+    }
+    
+    .skl-js:after{
+        width: 5%;
+    }
+    
+    .skl-java:after{
+        width: 35%;
+    }
+    
+    .skl-php:after{
+        width: 15%;
+    }
+    .skl-python:after{
+        width: 45%;
+    }
+    
+    .fa-css3-alt{
+        color: #0096DC;
+        font-size: 60px;
+    }
+    
+    .fa-html5{
+        color: #F36518;
+        font-size: 60px;
+    }
+    
+    .fa-js{
+        color: #FFDB1D;
+        font-size: 60px;
+    }
+    
+    .fa-java{
+        background: linear-gradient(0deg, rgba(14,138,202,1) 40%, rgba(237,32,37,1) 50%);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        font-size: 60px;
+    }
+    
+    .fa-php{
+        color: #8993C1;
+        font-size: 60px;
+    }
+    
+    .fa-python{
+        background: linear-gradient(140deg, rgba(69,134,185,1) 50%, rgba(255,230,52,1) 50%);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        font-size: 60px;
+    }
+    
+    
+    /* habilidades blandas */
+    .soft-title{
+        font-size: 70px;
+        text-align: center;
+        margin-top: 100px;
+    }
+    
+    .skills-soft{
+        margin: 50px 0px;    
+    }
+    
+    .skill-soft{
+        font-size: 30px;
+    }
+    
+    .skills-soft{
+        margin: 50px 0px;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+    
+    .soft{
+        list-style: none;
+        width: 47%;
+        margin: 0px;  
+        padding: 0px;
+        text-align: center;
+    }
+    
+    .skill-soft{
+        font-size: 50px;
+        margin-top: 10px;
+    }
+}
+
+@media (min-width: 1440px){
+    .about{
+        max-width: 1340px;
+        margin: 100px auto;
+        padding-left: 50px;
+        text-align: right;
+        padding-top: 50px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .about-div{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+    
+    .about-title{
+        font-size: 140px;
+        font-weight: bold;
+        margin: 0;
+        color: white;
+        letter-spacing: 8px;
+        line-height: 1.3;
+    }
+    
+    .about-me{
+        font-size: 50px;
+        margin: 50px 0px 5px auto;
+        font-weight: 500;
+        line-height: 1.3;
+        max-width: 800px;
+    }
+    
+    /* habilidades duras */
+    
+    .skills{
+        width: 70%;
+        margin: 0px auto;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .skills-div{
+        max-width: 100%;
+    }
+    
+    .hard-title{
+        font-size: 70px;
+        text-align: center;
+    }
+    
+    .skills-hard{
+        margin: 50px 0px;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+    
+    .hard{
+        list-style: none;
+        width: 47%;
+        margin: 0px;  
+        padding: 0px;
+    }
+    
+    .percent{
+        display: flex;
+        margin-top: 1%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        /* line-height: 1.5; */
+    }
+    
+    .percent:first-child{
+        margin-top: 0px;
+    }
+    
+    .skill-icon{
+        display: flex;
+        justify-content: flex-end;
+        width: 15%;
+    }
+    
+    .skill-detail{
+        width: 80%;
+    }
+    
+    .skill-info{
+        margin-bottom: 5px;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .skill-name{
+        font-size: 30px;
+        letter-spacing: 0.2em;
+        font-weight: bold;
+    }
+    
+    .skill-percent{
+        font-size: 25px;
+        font-weight: bold;
+        letter-spacing: 0.2em;
+    }
+    
+    .skill-bar{
+        width: 100%;
+        height: 10px;
+        background-color: white;
+        position: relative;
+        border-radius: 10px;
+        z-index: -1;
+    }
+    
+    .skill-bar:after{
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 100%;
+        border-radius: 10px;
+        background:linear-gradient(90deg, var(--primary-color), blue);
+    }   
+    
+    .skl-css:after{
+        width: 30%;
+    }
+    
+    .skl-html:after{
+        width: 45%;
+    }
+    
+    .skl-js:after{
+        width: 5%;
+    }
+    
+    .skl-java:after{
+        width: 35%;
+    }
+    
+    .skl-php:after{
+        width: 15%;
+    }
+    .skl-python:after{
+        width: 45%;
+    }
+    
+    .fa-css3-alt{
+        color: #0096DC;
+        font-size: 60px;
+    }
+    
+    .fa-html5{
+        color: #F36518;
+        font-size: 60px;
+    }
+    
+    .fa-js{
+        color: #FFDB1D;
+        font-size: 60px;
+    }
+    
+    .fa-java{
+        background: linear-gradient(0deg, rgba(14,138,202,1) 40%, rgba(237,32,37,1) 50%);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        font-size: 60px;
+    }
+    
+    .fa-php{
+        color: #8993C1;
+        font-size: 60px;
+    }
+    
+    .fa-python{
+        background: linear-gradient(140deg, rgba(69,134,185,1) 50%, rgba(255,230,52,1) 50%);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        font-size: 60px;
+    }
+    
+    
+    /* habilidades blandas */
+    .soft-title{
+        font-size: 70px;
+        text-align: center;
+        margin-top: 100px;
+    }
+    
+    .skills-soft{
+        margin: 50px 0px;    
+    }
+    
+    .skill-soft{
+        font-size: 30px;
+    }
+    
+    .skills-soft{
+        margin: 50px 0px;
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+    
+    .soft{
+        list-style: none;
+        width: 47%;
+        margin: 0px;  
+        padding: 0px;
+        text-align: center;
+    }
+    
+    .skill-soft{
+        font-size: 50px;
+        margin-top: 10px;
+    }
 }
