--- a/css/skills.css
+++ b/css/skills.css
@@ -77,7 +77,6 @@ body{
 .percent{
     display: flex;
     margin-top: 5%;
-    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -218,6 +217,11 @@ body{
 }
 
 @media (min-width: 768px){
+    .page-bottom{
+        width: 100%;
+        height: 95vh;
+    }
+
     .about{
         text-align: right;
         margin-right: 5%;
@@ -238,6 +242,14 @@ body{
         font-size: 70px;
     }
     
+    .skills{
+        width: 85%;
+    }
+
+    .skills-div{
+        max-width: 1000px;
+    }
+
     .skills-hard{
         margin: 50px 0px;
         flex-direction: row;
@@ -245,162 +257,43 @@ body{
     }
     
     .hard{
-        list-style: none;
         width: 47%;
-        margin: 0px;  
-        padding: 0px;
-    }
-    
-    .percent{
-        display: flex;
-        margin-top: 1%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        /* line-height: 1.5; */
     }
     
     .percent:first-child{
         margin-top: 0px;
-    }
-    
-    .skill-icon{
-        display: flex;
-        justify-content: flex-end;
-        width: 15%;
-    }
-    
-    .skill-detail{
-        width: 80%;
-    }
-    
-    .skill-info{
-        margin-bottom: 5px;
-        display: flex;
-        justify-content: space-between;
-    }
-    
-    .skill-name{
-        font-size: 30px;
-        letter-spacing: 0.2em;
-        font-weight: bold;
-    }
-    
-    .skill-percent{
-        font-size: 25px;
-        font-weight: bold;
-        letter-spacing: 0.2em;
-    }
-    
-    .skill-bar{
-        width: 100%;
-        height: 10px;
-        background-color: white;
-        position: relative;
-        border-radius: 10px;
-        z-index: -1;
-    }
-    
-    .skill-bar:after{
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 0;
-        height: 100%;
-        border-radius: 10px;
-        background:linear-gradient(90deg, var(--primary-color), blue);
     }   
     
-    .skl-css:after{
-        width: 30%;
+    .skill-name{
+        font-size: 25px;
     }
-    
-    .skl-html:after{
-        width: 45%;
-    }
-    
-    .skl-js:after{
-        width: 5%;
-    }
-    
-    .skl-java:after{
-        width: 35%;
-    }
-    
-    .skl-php:after{
-        width: 15%;
-    }
-    .skl-python:after{
-        width: 45%;
-    }
-    
-    .fa-css3-alt{
-        color: #0096DC;
-        font-size: 60px;
-    }
-    
-    .fa-html5{
-        color: #F36518;
-        font-size: 60px;
-    }
-    
-    .fa-js{
-        color: #FFDB1D;
-        font-size: 60px;
-    }
-    
-    .fa-java{
-        background: linear-gradient(0deg, rgba(14,138,202,1) 40%, rgba(237,32,37,1) 50%);
-        -webkit-text-fill-color: transparent;
-        -webkit-background-clip: text;
-        font-size: 60px;
-    }
-    
-    .fa-php{
-        color: #8993C1;
-        font-size: 60px;
-    }
-    
+
+    .skill-percent{
+        font-size:  25px;
+    }  
+        
+    .fa-css3-alt,
+    .fa-html5,
+    .fa-js,
+    .fa-java,
+    .fa-php,
     .fa-python{
-        background: linear-gradient(140deg, rgba(69,134,185,1) 50%, rgba(255,230,52,1) 50%);
-        -webkit-text-fill-color: transparent;
-        -webkit-background-clip: text;
-        font-size: 60px;
+        font-size: 50px;
     }
-    
     
     /* habilidades blandas */
     .soft-title{
         font-size: 70px;
-        text-align: center;
-        margin-top: 100px;
     }
-    
-    .skills-soft{
-        margin: 50px 0px;    
-    }
-    
-    .skill-soft{
-        font-size: 30px;
-    }
-    
+
     .skills-soft{
         margin: 50px 0px;
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-    }
-    
-    .soft{
-        list-style: none;
-        width: 47%;
-        margin: 0px;  
-        padding: 0px;
-        text-align: center;
+        flex-direction: row;
+        justify-content: space-between;   
     }
     
     .skill-soft{
-        font-size: 50px;
+        font-size: 40px;
         margin-top: 10px;
     }
 }
@@ -410,32 +303,16 @@ body{
         max-width: 1340px;
         margin: 100px auto;
         padding-left: 50px;
-        text-align: right;
         padding-top: 50px;
-        display: flex;
-        flex-direction: column;
     }
-    
-    .about-div{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-    }
-    
+
     .about-title{
         font-size: 140px;
-        font-weight: bold;
-        margin: 0;
-        color: white;
-        letter-spacing: 8px;
-        line-height: 1.3;
     }
     
     .about-me{
         font-size: 50px;
         margin: 50px 0px 5px auto;
-        font-weight: 500;
-        line-height: 1.3;
         max-width: 800px;
     }
     
@@ -443,184 +320,37 @@ body{
     
     .skills{
         width: 70%;
-        margin: 0px auto;
-        display: flex;
-        flex-direction: column;
     }
-    
+
     .skills-div{
         max-width: 100%;
     }
     
     .hard-title{
         font-size: 70px;
-        text-align: center;
     }
-    
-    .skills-hard{
-        margin: 50px 0px;
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-    }
-    
-    .hard{
-        list-style: none;
-        width: 47%;
-        margin: 0px;  
-        padding: 0px;
-    }
-    
-    .percent{
-        display: flex;
-        margin-top: 1%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        /* line-height: 1.5; */
-    }
-    
-    .percent:first-child{
-        margin-top: 0px;
-    }
-    
-    .skill-icon{
-        display: flex;
-        justify-content: flex-end;
-        width: 15%;
-    }
-    
-    .skill-detail{
-        width: 80%;
-    }
-    
-    .skill-info{
-        margin-bottom: 5px;
-        display: flex;
-        justify-content: space-between;
-    }
-    
+
     .skill-name{
         font-size: 30px;
-        letter-spacing: 0.2em;
-        font-weight: bold;
     }
-    
     .skill-percent{
-        font-size: 25px;
-        font-weight: bold;
-        letter-spacing: 0.2em;
+        font-size:  30px;
     }
     
-    .skill-bar{
-        width: 100%;
-        height: 10px;
-        background-color: white;
-        position: relative;
-        border-radius: 10px;
-        z-index: -1;
-    }
-    
-    .skill-bar:after{
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 0;
-        height: 100%;
-        border-radius: 10px;
-        background:linear-gradient(90deg, var(--primary-color), blue);
-    }   
-    
-    .skl-css:after{
-        width: 30%;
-    }
-    
-    .skl-html:after{
-        width: 45%;
-    }
-    
-    .skl-js:after{
-        width: 5%;
-    }
-    
-    .skl-java:after{
-        width: 35%;
-    }
-    
-    .skl-php:after{
-        width: 15%;
-    }
-    .skl-python:after{
-        width: 45%;
-    }
-    
-    .fa-css3-alt{
-        color: #0096DC;
-        font-size: 60px;
-    }
-    
-    .fa-html5{
-        color: #F36518;
-        font-size: 60px;
-    }
-    
-    .fa-js{
-        color: #FFDB1D;
-        font-size: 60px;
-    }
-    
-    .fa-java{
-        background: linear-gradient(0deg, rgba(14,138,202,1) 40%, rgba(237,32,37,1) 50%);
-        -webkit-text-fill-color: transparent;
-        -webkit-background-clip: text;
-        font-size: 60px;
-    }
-    
-    .fa-php{
-        color: #8993C1;
-        font-size: 60px;
-    }
-    
+    .fa-css3-alt,
+    .fa-html5,
+    .fa-js,
+    .fa-java,
+    .fa-php,
     .fa-python{
-        background: linear-gradient(140deg, rgba(69,134,185,1) 50%, rgba(255,230,52,1) 50%);
-        -webkit-text-fill-color: transparent;
-        -webkit-background-clip: text;
         font-size: 60px;
     }
     
-    
-    /* habilidades blandas */
     .soft-title{
-        font-size: 70px;
-        text-align: center;
-        margin-top: 100px;
+        margin: 60px 0;
     }
-    
-    .skills-soft{
-        margin: 50px 0px;    
-    }
-    
-    .skill-soft{
-        font-size: 30px;
-    }
-    
-    .skills-soft{
-        margin: 50px 0px;
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-    }
-    
-    .soft{
-        list-style: none;
-        width: 47%;
-        margin: 0px;  
-        padding: 0px;
-        text-align: center;
-    }
-    
+
     .skill-soft{
         font-size: 50px;
-        margin-top: 10px;
     }
 }
